syntax = "proto3";
package cheqdid.cheqdnode.cheqd;
import "cheqd/did.proto";
import "cheqd/credDef.proto";
import "cheqd/schema.proto";

// this line is used by starport scaffolding # proto/tx/import
option go_package = "github.com/cheqd/cheqd-node/x/cheqd/types";

message StateValue {
  oneof data {
    Did did = 1;
    Schema schema = 2;
    CredDef cred_def = 3;
  }
  string tx_hash = 4;
  string timestamp = 5;
  Metadata metadata = 6; // optional
}

// metadata
message Metadata {
  string created = 1;
  string updated = 2;
  bool deactivated = 3;
  string version_id = 4;
}
